# csp-benchmarks

./: .gitignore  .gitmodules  Cargo.toml  benchmark.sh  rust-toolchain.toml
.github/workflows/: lints.yml  rust_benchmarks_parallel.yml  rust_benchmarks_serial.yml
barretenberg/: .gitignore  ecdsa_prepare.sh  keccak_measure.sh  keccak_prepare.sh  keccak_prove.sh  keccak_prove_for_verify.sh  keccak_verify.sh  measure.sh  poseidon_prepare.sh  prepare_verify.sh  prove.sh  sha256_prepare.sh  verify.sh
barretenberg/circuits/: Nargo.toml
barretenberg/circuits/hash/keccak256/: Nargo.toml
barretenberg/circuits/hash/keccak256/src/: main.nr
barretenberg/circuits/hash/poseidon/: Nargo.toml
ceno/: .gitignore  Cargo.toml  build.rs
ceno-examples-stub/: Cargo.toml
ceno-examples-stub/src/: lib.rs
ceno/benches/: keccak_alloy_keccak.rs  keccak_ceno_keccak.rs  sha256.rs
ceno/guest/: Cargo.toml
ceno/guest/.cargo/: config.toml
ceno/guest/src/: lib.rs
ceno/src/: guest.rs  lib.rs
circom/: Cargo.toml  build.rs
circom/benches/: keccak_bench.rs  poseidon_bench.rs  sha256_bench.rs
circom/circuits/keccak/: keccak_1024.circom  keccak_128.circom  keccak_2048.circom  keccak_256.circom  keccak_512.circom  keccak_hash.circom
circom/circuits/keccak/keccak_1024/: keccak_1024.cpp  keccak_1024_0001.zkey
circom/circuits/keccak/keccak_128/: keccak_128.cpp  keccak_128_0001.zkey
circom/circuits/keccak/keccak_2048/: keccak_2048.cpp  keccak_2048_0001.zkey
circom/circuits/keccak/keccak_256/: keccak_256.cpp  keccak_256_0001.zkey
circom/circuits/keccak/keccak_512/: keccak_512.cpp  keccak_512_0001.zkey
circom/circuits/poseidon/: poseidon_12.circom  poseidon_16.circom  poseidon_2.circom  poseidon_4.circom  poseidon_8.circom  poseidon_hash.circom
circom/circuits/poseidon/poseidon_12/: poseidon_12_0001.zkey
circom/circuits/poseidon/poseidon_16/: poseidon_16_0001.zkey
circom/circuits/poseidon/poseidon_2/: poseidon_2_0001.zkey
circom/circuits/poseidon/poseidon_4/: poseidon_4_0001.zkey
circom/circuits/poseidon/poseidon_8/: poseidon_8_0001.zkey
circom/src/: keccak.rs  lib.rs  poseidon.rs  sha256.rs
jolt/: Cargo.toml
jolt/benches/: sha256.rs
jolt/src/: lib.rs
ligetron/: measure.sh
miden/: Cargo.toml
miden/guest/sha256/: sha256.masm
miden/src/: lib.rs
nexus/: Cargo.toml
nexus/guest/sha256/: Cargo.toml
nexus/guest/sha256/src/: main.rs
nexus/src/: lib.rs
openvm/: Cargo.toml
plonky2/: Cargo.toml
plonky2/benches/: keccak.rs  poseidon.rs  sha256.rs
plonky2/src/: bench.rs
plonky2/src/keccak256/: circuit.rs  u64target.rs
polyhedra-expander/: Cargo.toml  build.rs
polyhedra-expander/benches/: poseidon.rs  sha256.rs
polyhedra-expander/src/: bench.rs  lib.rs  poseidon.rs
polyhedra-expander/templates/: poseidon_sizes.rs.tpl
provekit/: Cargo.toml
provekit/benches/: poseidon.rs
provekit/circuits/: Nargo.toml
provekit/circuits/hash/poseidon/: Nargo.toml
provekit/src/: lib.rs
risc0/: Cargo.toml
risc0/benches/: keccak.rs
risc0/guest/ecdsa/: Cargo.toml
risc0/guest/keccak/: Cargo.toml
risc0/guest/keccak/src/: main.rs
risc0/guest/sha256/: Cargo.toml
risc0/src/: lib.rs
rookie-numbers/: Cargo.toml
sp1/: Cargo.toml
sp1/src/: lib.rs
utils/: Cargo.toml
utils/src/: harness.rs  lib.rs  main.rs  metadata.rs  zkvm.rs
utils/src/zkvm/: ecdsa.rs  hash.rs  helpers.rs  keccak.rs  sha256.rs  traits.rs
