[package]
name = "risc0"
version = "0.1.0"
edition = "2024"

[dependencies]
ere-risc0 = { git = "https://github.com/eth-act/ere", rev = "aaf2efcc78fecf5f3b7d149a0042c97057a10fb6" }
bincode = { workspace = true }

# Workspace
criterion = { workspace = true }
clap = { workspace = true }
ere-zkvm-interface = { workspace = true }
utils = { workspace = true }

[[bench]]
name = "sha256"
harness = false

[[bench]]
name = "ecdsa"
harness = false

[[bench]]
name = "keccak"
harness = false

[[bin]]
name = "sha256_mem_risc0"
path = "src/bin/sha256_mem.rs"

[[bin]]
name = "ecdsa_mem_risc0"
path = "src/bin/ecdsa_mem.rs"

[[bin]]
name = "keccak_mem_risc0"
path = "src/bin/keccak_mem.rs"
