[package]
name = "rookie-numbers"
version = "0.1.0"
edition = "2021"

[lib]

[dependencies]
sha256 = { git = "https://github.com/clementwalter/rookie-numbers", rev = "90224e46d7e4f336df5d244f239ffdb5378bcfc5", default-features = false, features = [
  "parallel",
] }
utils = { path = "../utils" }
bincode = "1.3.3"
clap = { version = "4.5.20", features = ["derive", "env"] }
criterion = "0.5.1"

[[bench]]
name = "sha256"
harness = false

[[bin]]
name = "sha256_mem_rookie_numbers"
path = "src/bin/sha256_mem.rs"
