[package]
name = "risc0-keccak"
version = "0.1.0"
edition = "2024"

[dependencies]
risc0-zkvm = { version = "3.0.4", default-features = false, features = [
    "std",
    "unstable",
] }
tiny-keccak = { git = "https://github.com/risc0/tiny-keccak", tag = "tiny-keccak/v2.0.2-risczero.0", features = ["keccak"] }

[workspace]
